--- a/Projeto/API/API/web.config
+++ b/Projeto/API/API/web.config
@@ -7,7 +7,7 @@
 
 
   <appSettings>
-    <add key="ServersMongoDB" value="teste.koezu.com" />
+    <add key="ServersMongoDB" value="localhost" />
     <add key="DBMongo" value="AWA" />
   </appSettings>
 
