--- a/Projeto/Instawa/.io-config.json
+++ b/Projeto/Instawa/.io-config.json
@@ -1,1 +1,1 @@
-{"app_id":"68e3a111","api_key":"3a6982ab6ce2c73a07255a985972351650b8fa66e00ac280"}
+{"app_id":"68e3a111","api_key":"3a6982ab6ce2c73a07255a985972351650b8fa66e00ac280","dev_push":false,"gcm_key":"1038368474519"}
